<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".forgotpass.ForgotPassFragment">

    <data>

        <variable
            name="ForgotPassViewModel"
            type="com.example.childcontrol.forgotpass.ForgotPassViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="@string/password_text"
            android:background="@drawable/edit_text_style"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:text="@={ForgotPassViewModel.email}"
            app:layout_constraintBottom_toTopOf="@+id/errorMsgForgotPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_forgot_pass" />

        <TextView
            android:id="@+id/title_forgot_pass"
            style="@style/Title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tittle_forgot_pass"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/description_forgot_pass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/description_forgot_pass"
            style="@style/Description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/description_forgot_pass"
            android:textColor="?attr/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_forgot_pass"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_pass_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> ForgotPassViewModel.forgot_pass()}"
            android:text="@string/forgot_pass_button"
            app:backgroundTint="@android:color/holo_blue_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorMsgForgotPass"
            app:layout_constraintVertical_bias="0.591" />

        <TextView
            android:id="@+id/errorMsgForgotPass"
            style="@style/Description_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_msg_forgot_pass"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/forgot_pass_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>